Insertion du texte de présentation pour le cours

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Comment réussir un cours de Git pour les nuls</h1>
+        <p>Cette page sera le support de cours sur Git et sera mis à jour régulièrement.</p>
     </body>
     </html>
     
